Fix for volume slider to often be unexpectedly hidden in fullscreen mode The toolbars are now only hidden if the mouse is seen outside of them, and if it does not move for 2 seconds.

BUG: 192772
FIXED-IN: 4.8
CCMAIL: ian@monroe.nu


svn path=/trunk/KDE/kdemultimedia/dragonplayer/; revision=1258978